appointment basic functionalities